@@ -74,7 +74,7 @@ my $runtime_requires = {
 
   # XS (or XS-dependent) libs
   'DBI'                      => '1.609',
-  'namespace::clean'         => '0.14',
+  'namespace::clean'         => '0.20',
   'Sub::Name'                => '0.04',
   'Variable::Magic'          => '0.44',
 
@@ -164,21 +164,6 @@ warn $optdep_msg if $Module::Install::AUTHOR;
 auto_install();
 warn $optdep_msg if $Module::Install::AUTHOR;
 
-# if this is a smoker, and some known-to-be-trouble reqs are already present
-# (are not missing reqs) - we can exit 1 now so that we register an N/A report
-# instead of a FAIL
-if ($ENV{AUTOMATED_TESTING} && ! $ENV{PERL5_CPANM_IS_RUNNING} && ! $ENV{RELEASE_TESTING}) {
-
-  eval {
-    require Package::Stash;
-    my $psv = Package::Stash->VERSION;
-    if ($psv != 0.13 and $psv >= 0.09 and $psv <= 0.15) {
-      warn "A trial version $psv of Package::Stash detected (known to break namespace::clean). "
-          ."Aborting useless smoke test\n";
-      exit 1;
-    }
-  };
-}
 
 # re-create various autogenerated documentation bits
 if ($Module::Install::AUTHOR) {
